--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "dependencies": {
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
+    "dotenv": "^8.2.0",
+    "html-to-text": "^5.1.1",
+    "jsdom": "^16.2.2",
     "livereload": "^0.8.2",
+    "node-fetch": "^2.6.0",
     "rollup": "^1.27.14",
     "rollup-plugin-babel": "^4.3.3",
     "serve": "^11.2.0",
