--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
+    "@rollup/plugin-commonjs": "^12.0.0",
     "dotenv": "^8.2.0",
     "html-to-text": "^5.1.1",
     "jsdom": "^16.2.2",
