--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
   "devDependencies": {
     "@11ty/eleventy": ">=0.11.0",
+    "@rollup/plugin-virtual": "^2.0.3",
     "chalk": "^4.1.0",
     "front-matter": "^4.0.2",
+    "javascript-stringify": "^2.0.1",
     "markdown-it-attrs": "^4.0.0",
     "markdown-it-container": "^3.0.0",
     "markdown-it-prism": "^2.1.4",
