--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "postcss-prefix-selector": "^1.7.2",
     "rollup": "^2.38.0",
     "sass": "^1.32.7"
+  },
+  "dependencies": {
+    "jstransformer-markdown-it": "^2.1.0"
   }
 }
