--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "sass": "^1.32.7"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "html-to-text": "^7.0.0",
     "js-yaml": "^3.14.1",
-    "jstransformer-markdown-it": "^2.1.0"
+    "jstransformer-markdown-it": "^2.1.0",
+    "node-fetch": "^2.6.1"
   }
 }
