--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass": "^1.32.7"
   },
   "dependencies": {
+    "@11ty/eleventy-cache-assets": "^2.1.0",
     "dotenv": "^8.2.0",
     "html-to-text": "^7.0.0",
     "js-yaml": "^3.14.1",
