--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "js-yaml": "^3.14.1",
     "jstransformer-markdown-it": "^2.1.0",
     "livereload": "^0.9.1",
+    "markdown-it-anchor": "^7.1.0",
     "postcss-clean": "^1.2.2",
     "serve": "^11.3.2"
   }
