--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@11ty/eleventy-cache-assets": "^2.1.0",
+    "@11ty/eleventy-img": "^0.8.3",
     "dotenv": "^8.2.0",
     "html-to-text": "^7.0.0",
     "js-yaml": "^3.14.1",
