--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^1.0.0-rc.3"
+    "astro": "^1.1.1"
   },
   "dependencies": {
     "node-html-parser": "^5.3.3",
