--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preact": "^10.6.5"
   },
   "dependencies": {
+    "nanostores": "^0.6.0",
     "node-html-parser": "^5.3.3",
     "vitest": "^0.20.2"
   }
