--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/svelte": "^3.1.0",
     "@fontsource/atkinson-hyperlegible": "^5.0.5",
     "@rive-app/canvas": "^2.1.0",
-    "astro": "^2.9.1",
+    "astro": "^2.10.1",
     "astro-icon": "^0.8.1",
-    "open-props": "^1.5.10"
+    "open-props": "^1.5.10",
+    "sass": "^1.64.2",
+    "svelte": "^4.0.0"
   }
 }
