--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/markdoc": "^0.4.4",
     "@astrojs/svelte": "^3.1.0",
     "@fontsource/atkinson-hyperlegible": "^5.0.5",
     "@rive-app/canvas": "^2.1.0",
