--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@rive-app/canvas": "^2.1.0",
     "astro": "^3.2.3",
     "astro-icon": "^0.8.1",
+    "gsap": "^3.12.2",
     "nanoid": "^4.0.2",
     "open-props": "^1.5.10",
     "sass": "^1.64.2",
