--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "nanoid": "^4.0.2",
     "open-props": "^1.5.10",
     "sass": "^1.64.2",
+    "tailwindcss": "^3.0.24",
     "vite-plugin-simple-scope": "^1.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "typescript": "^5.2.2",
     "vite": "^4.4.8"
   }
