--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "astro-icon": "^0.8.1",
     "gsap": "^3.12.2",
     "nanoid": "^4.0.2",
+    "nanostores": "^0.9.5",
     "open-props": "^1.6.16",
     "sass": "^1.64.2",
     "tailwindcss": "^3.0.24",
