--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "@fontsource/atkinson-hyperlegible": "^5.0.5",
     "@fontsource/ranga": "^5.0.18",
     "@github/catalyst": "^1.6.0",
+    "@tailwindcss/postcss": "4.0.0-alpha.9",
+    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/vite": "0.0.0-development.1",
     "astro": "^3.2.3",
     "astro-icon": "^1.1.0",
     "gsap": "^3.12.2",
     "nanoid": "^4.0.2",
     "nanostores": "^0.9.5",
     "open-props": "^1.6.16",
-    "tailwindcss": "^3.0.24",
-    "@tailwindcss/typography": "^0.5.10",
+    "tailwindcss": "4.0.0-alpha.9",
     "vite-plugin-simple-scope": "^1.0.3"
   },
   "devDependencies": {
