--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,7 @@
     "target": "ES2020",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "noUnusedLocals": false,
+    "strictPropertyInitialization": false
   }
 }
