feat: astro-font - optimize fonts & prevent CLS

--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
   "dependencies": {
     "@astrojs/markdoc": "^0.4.4",
     "@astrojs/tailwind": "^5.0.1",
-    "@fontsource/atkinson-hyperlegible": "^5.0.5",
-    "@fontsource/ranga": "^5.0.18",
     "@github/catalyst": "^1.6.0",
     "@preact/signals": "^1.2.3",
     "@tailwindcss/postcss": "4.0.0-alpha.14",
     "@tailwindcss/typography": "^0.5.10",
     "@tailwindcss/vite": "0.0.0-development.1",
     "astro": "^3.2.3",
+    "astro-font": "^0.0.80",
     "astro-icon": "^1.1.0",
     "gsap": "^3.12.2",
     "nanoid": "^4.0.2",
