--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
+    "dev": "wrangler types && astro dev",
+    "start": "wrangler types && astro dev",
+    "build": "wrangler types && astro build",
+    "preview": "wrangler types && astro preview",
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^10.2.6",
     "@astrojs/markdoc": "^0.11.0",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource/atkinson-hyperlegible": "^5.0.5",
