--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/postcss": "4.0.0-alpha.14",
     "@tailwindcss/typography": "^0.5.10",
     "@tailwindcss/vite": "0.0.0-development.1",
+    "@upstash/ratelimit": "^1.1.3",
     "@upstash/redis": "^1.31.1",
     "astro": "^4.8.4",
     "astro-embed": "^0.7.2",
