--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,5 @@
+compatibility_flags = [ "nodejs_compat" ]
+
 [vars]
 UPSTASH_REDIS_REST_URL="https://saving-gopher-40785.upstash.io"
 UPSTASH_REDIS_REST_TOKEN=""
