--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gsap": "^3.12.2",
     "nanoid": "^4.0.2",
     "open-props": "^1.6.16",
+    "sharp": "^0.33.4",
     "tailwindcss": "4.0.0-alpha.14",
     "vite-plugin-simple-scope": "^1.0.3",
     "wrangler": "^3.57.0"
