--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/cloudflare": "^10.2.6",
     "@astrojs/markdoc": "^0.11.0",
+    "@astrojs/react": "^3.4.0",
     "@fontsource/atkinson-hyperlegible": "^5.0.5",
     "@fontsource/ranga": "^5.0.18",
     "@github/catalyst": "^1.6.0",
@@ -21,16 +22,23 @@
     "@tailwindcss/vite": "0.0.0-development.1",
     "@upstash/ratelimit": "^1.1.3",
     "@upstash/redis": "^1.31.1",
-    "astro": "^4.8.7",
+    "astro": "^4.9.1",
     "astro-embed": "^0.7.2",
     "astro-icon": "^1.1.0",
     "gsap": "^3.12.2",
     "nanoid": "^4.0.2",
     "open-props": "^1.6.16",
+    "react": "19.0.0-beta-26f2496093-20240514",
+    "react-dom": "19.0.0-beta-26f2496093-20240514",
     "sharp": "^0.33.4",
     "tailwindcss": "4.0.0-alpha.14",
     "vite-plugin-simple-scope": "^1.0.3",
-    "wrangler": "^3.57.0"
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
