--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,11 @@
     "strictPropertyInitialization": false,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./src/*"]
-    }
+      "~/*": [
+        "./src/*"
+      ]
+    },
+    "jsx": "react-jsx",
+    "jsxImportSource": "react"
   }
 }
