--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "^10.2.6",
+    "@astrojs/db": "^0.11.4",
     "@astrojs/markdoc": "^0.11.0",
     "@astrojs/react": "^3.4.0",
     "@fontsource/atkinson-hyperlegible": "^5.0.5",
@@ -20,6 +21,8 @@
     "@tailwindcss/postcss": "4.0.0-alpha.14",
     "@tailwindcss/typography": "^0.5.10",
     "@tailwindcss/vite": "0.0.0-development.1",
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc",
     "@upstash/ratelimit": "^1.1.3",
     "@upstash/redis": "^1.31.1",
     "astro": "^4.9.1",
@@ -32,9 +35,7 @@
     "react-dom": "19.0.0-beta-26f2496093-20240514",
     "sharp": "^0.33.4",
     "tailwindcss": "4.0.0-alpha.14",
-    "vite-plugin-simple-scope": "^1.0.3",
-    "@types/react": "npm:types-react@rc",
-    "@types/react-dom": "npm:types-react-dom@rc"
+    "vite-plugin-simple-scope": "^1.0.3"
   },
   "overrides": {
     "@types/react": "npm:types-react@rc",
