--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-dom": "19.0.0-beta-26f2496093-20240514",
     "sharp": "^0.33.4",
     "tailwindcss": "4.0.0-alpha.14",
-    "vite-plugin-simple-scope": "^1.0.3"
+    "vite-plugin-simple-scope": "^1.0.3",
+    "wrangler": "^3.57.1"
   },
   "overrides": {
     "@types/react": "npm:types-react@rc",
