--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "@types/react-dom": "npm:types-react-dom@rc"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "vite": "^4.4.8"
+    "typescript": "^5.2.2"
   }
 }
