--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/cloudflare": "^10.2.6",
     "@astrojs/db": "^0.11.4",
     "@astrojs/markdoc": "^0.11.0",
+    "@astrojs/netlify": "^5.3.3",
     "@astrojs/react": "^3.4.0",
     "@fontsource/atkinson-hyperlegible": "^5.0.5",
     "@fontsource/ranga": "^5.0.18",
