--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/react-dom": "npm:types-react-dom@rc",
     "@upstash/ratelimit": "^1.1.3",
     "@upstash/redis": "^1.31.1",
-    "astro": "0.0.0-server-islands-20240621194657",
+    "astro": "4.11.3",
     "astro-embed": "^0.7.2",
     "astro-icon": "^1.1.0",
     "gsap": "^3.12.2",
