--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "19.0.0-beta-26f2496093-20240514",
     "react-dom": "19.0.0-beta-26f2496093-20240514",
     "sharp": "^0.33.4",
+    "signal-polyfill": "^0.1.1",
     "tailwindcss": "4.0.0-alpha.14",
     "vite-plugin-simple-scope": "^1.0.3",
     "wrangler": "^3.57.1"
