--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
     "@fontsource/atkinson-hyperlegible": "^5.0.5",
     "@fontsource/ranga": "^5.0.18",
     "@github/catalyst": "^1.6.0",
-    "@tailwindcss/postcss": "4.0.0-alpha.14",
+    "@tailwindcss/postcss": "^4.0.0-alpha.17",
     "@tailwindcss/typography": "^0.5.10",
-    "@tailwindcss/vite": "0.0.0-development.1",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
     "@upstash/ratelimit": "^1.1.3",
@@ -33,7 +32,7 @@
     "react-dom": "19.0.0-beta-26f2496093-20240514",
     "sharp": "^0.33.4",
     "signal-polyfill": "^0.1.1",
-    "tailwindcss": "4.0.0-alpha.14",
+    "tailwindcss": "^4.0.0-alpha.17",
     "vite-plugin-simple-scope": "^1.0.3",
     "wrangler": "^3.57.1"
   },
