--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,10 @@
     "strictPropertyInitialization": false,
     "baseUrl": ".",
     "paths": {
-      "~/*": [
-        "./src/*"
-      ]
+      "~/*": ["./src/*"]
     },
     "jsx": "react-jsx",
-    "jsxImportSource": "react"
+    "jsxImportSource": "react",
+    "exactOptionalPropertyTypes": false
   }
 }
