deps: bump postcss

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "astro-icon": "^1.1.0",
     "gsap": "^3.12.2",
     "open-props": "^1.6.16",
+    "postcss": "^8.4.39",
     "react": "19.0.0-beta-26f2496093-20240514",
     "react-dom": "19.0.0-beta-26f2496093-20240514",
     "sharp": "^0.33.4",
