--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/db": "^0.11.7",
     "@astrojs/markdoc": "^0.11.1",
     "@astrojs/netlify": "^5.3.5",
     "@astrojs/react": "^3.6.0",
@@ -34,8 +33,7 @@
     "sharp": "^0.33.4",
     "signal-polyfill": "^0.1.1",
     "tailwindcss": "^4.0.0-alpha.17",
-    "vite-plugin-simple-scope": "^1.0.3",
-    "wrangler": "^3.57.1"
+    "vite-plugin-simple-scope": "^1.0.3"
   },
   "overrides": {
     "@types/react": "npm:types-react@rc",
