--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "@astrojs/markdoc": "^0.11.1",
     "@astrojs/netlify": "^5.3.5",
     "@astrojs/react": "^3.6.0",
-    "@fontsource/atkinson-hyperlegible": "^5.0.5",
-    "@fontsource/ranga": "^5.0.18",
     "@github/catalyst": "^1.6.0",
     "@tailwindcss/postcss": "^4.0.0-alpha.17",
     "@tailwindcss/typography": "^0.5.10",
@@ -24,6 +22,7 @@
     "@upstash/redis": "^1.31.1",
     "astro": "4.11.5",
     "astro-embed": "^0.7.2",
+    "astro-font": "^0.0.81",
     "astro-icon": "^1.1.0",
     "gsap": "^3.12.2",
     "open-props": "^1.6.16",
