--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@astrojs/netlify": "^5.3.5",
     "@astrojs/react": "^3.6.0",
     "@github/catalyst": "^1.6.0",
+    "@markdoc/markdoc": "^0.4.0",
     "@tailwindcss/postcss": "^4.0.0-alpha.17",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
     "@upstash/ratelimit": "^1.1.3",
     "@upstash/redis": "^1.31.1",
-    "astro": "4.11.5",
+    "astro": "0.0.0-contentlayer-20240715192053",
     "astro-embed": "^0.7.2",
     "astro-font": "^0.0.81",
     "astro-icon": "^1.1.0",
