--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "19.0.0-beta-26f2496093-20240514",
     "sharp": "^0.33.4",
     "signal-polyfill": "^0.1.1",
+    "simple-stack-query": "^0.0.1",
     "tailwindcss": "^4.0.0-alpha.17",
     "vite-plugin-simple-scope": "^1.0.3"
   },
@@ -38,6 +39,7 @@
     "@types/react-dom": "npm:types-react-dom@rc"
   },
   "devDependencies": {
+    "@astrojs/check": "^0.8.2",
     "typescript": "^5.2.2"
   }
 }
