--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "sharp": "^0.33.4",
     "signal-polyfill": "^0.1.1",
     "simple-stack-query": "^0.1.1",
-    "tailwindcss": "^4.0.0-alpha.17",
-    "vite-plugin-simple-scope": "^2.0.2"
+    "tailwindcss": "^4.0.0-alpha.17"
   },
   "overrides": {
     "@types/react": "npm:types-react@rc",
