fix: add "include" for astro check to work

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "extends": "astro/tsconfigs/strictest",
+  "include": ["src", "astro.config.mjs"],
   "compilerOptions": {
     "target": "ES2020",
     "noUnusedLocals": false,
