--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/markdoc": "^0.11.4",
     "@astrojs/netlify": "^5.5.1",
     "@astrojs/react": "^3.6.2",
+    "@astrojs/rss": "^4.0.7",
     "@tailwindcss/postcss": "^4.0.0-alpha.17",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
