--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@astrojs/netlify": "^5.5.1",
     "@astrojs/react": "^3.6.2",
     "@astrojs/rss": "^4.0.7",
-    "@tailwindcss/postcss": "^4.0.0-alpha.17",
+    "@tailwindcss/vite": "4.0.0-beta.2",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
     "@upstash/ratelimit": "^1.1.3",
@@ -31,7 +31,7 @@
     "sharp": "^0.33.4",
     "signal-polyfill": "^0.1.1",
     "simple-stack-query": "^0.2.0",
-    "tailwindcss": "^4.0.0-alpha.17"
+    "tailwindcss": "4.0.0-beta.2"
   },
   "overrides": {
     "@types/react": "npm:types-react@rc",
