--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/netlify": "^5.5.1",
     "@astrojs/react": "^3.6.2",
     "@astrojs/rss": "^4.0.7",
+    "@simplestack/query": "^0.3.0",
     "@tailwindcss/vite": "4.0.0-beta.2",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
@@ -30,8 +31,7 @@
     "react": "19.0.0-beta-26f2496093-20240514",
     "react-dom": "19.0.0-beta-26f2496093-20240514",
     "sharp": "^0.33.4",
-    "signal-polyfill": "^0.1.1",
-    "simple-stack-query": "^0.2.0",
+    "signal-polyfill": "^0.2.2",
     "tailwindcss": "4.0.0-beta.2"
   },
   "overrides": {
